stile es dadi e struttura

--- a/es-dadi/index.html
+++ b/es-dadi/index.html
@@ -10,6 +10,11 @@
     
     <div id="contenitore">
 
+        <div id="titolo">
+
+            <h1>Riesci a vincere a dadi?</h1>
+
+        </div>
         <div id="box-dadi">
            <button id="lancia-dado">
                
